# crewai-fg-transcript-analyzer

./: README.md  agents.yaml  crew.py  final_fg_report.md  main.py  pyproject.toml  tasks.yaml  white-strawberry-focus-group-transcript.md
documents/: white-strawberry-focus-group-objectives.md
